--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "ptud_web",
+  "name": "contactbook-backend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js"
   },
-  "author": "Phu Vu Luan",
+  "author": "VuLuan",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.0.1",
+    "start": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.20"
   }
 }
